--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,6 @@
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="monoandroid60" />
   <package id="SQLitePCL.plugin.sqlite3.android" version="0.9.2" targetFramework="monoandroid60" />
   <package id="SQLitePCL.raw" version="0.9.2" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v13" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
 </packages>
