--- a/MedicalApp.csproj
+++ b/MedicalApp.csproj
@@ -74,9 +74,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseControl.cs" />
+    <Compile Include="MainPageFragment.cs" />
     <Compile Include="MainScreenActivity.cs" />
     <Compile Include="LoginActivity.cs" />
-    <Compile Include="MedicationPagerAdapter.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
