--- a/MedicalApp.csproj
+++ b/MedicalApp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DatabaseControl.cs" />
     <Compile Include="GUI.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NextDay_DialogFragment.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -80,6 +81,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\GUI.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\NextDay_DialogFragment_Layout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
