--- a/Mobile App/MedicalApp.csproj
+++ b/Mobile App/MedicalApp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Medication.cs" />
     <Compile Include="MyListViewAdapter.cs" />
     <Compile Include="NextDay_DialogFragment.cs" />
+    <Compile Include="NotificationPublisher.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
